Revert asset pipeline config for Heroku

--- a/app/views/pages/empty.html.erb
+++ b/app/views/pages/empty.html.erb
@@ -267,7 +267,7 @@
                     <!-- Sidebar user panel -->
                     <div class="user-panel">
                         <div class="pull-left image">
-                            <img src=<%= asset_path('avatar3.png') %> class="img-circle" alt="User Image" />
+                            <img src="/assets/avatar3.png" class="img-circle" alt="User Image" />
                         </div>
                         <div class="pull-left info">
                             <p>Hello, Jane</p>
