Refractor Login page

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,34 +1,5 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <title>AdminLTE | Dashboard</title>
-        <meta content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no' name='viewport'>
-        <%= stylesheet_link_tag '//fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic',  media: "all", "data-turbolinks-track" => true %>
-        <%= stylesheet_link_tag '//fonts.googleapis.com/css?family=Kaushan+Script', media: "all", "data-turbolinks-track" => true %>
-        <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
-        <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
-        <%= csrf_meta_tags %>
-        <%= render 'layouts/shim' %>
-    </head>
-    <body class="skin-blue">
-        <%= render 'layouts/header' %>
-        <div class="wrapper row-offcanvas row-offcanvas-left">
-        <%= render 'layouts/nav' %>
-            <!-- Right side column. Contains the navbar and content of the page -->
-            <aside class="right-side">
-                <!-- Content Header (Page header) -->
-                <section class="content-header">
-                    <h1>
-                        Dashboard
-                        <small>Control panel</small>
-                    </h1>
-                    <ol class="breadcrumb">
-                        <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
-                        <li class="active">Dashboard</li>
-                    </ol>
-                </section>
-
+    <% provide(:title, 'Dashboard') %>
+    <%= render 'layouts/header' %>
                 <!-- Main content -->
                 <section class="content">
 
@@ -481,12 +452,5 @@
 
                         </section><!-- right col -->
                     </div><!-- /.row (main row) -->
-
                 </section><!-- /.content -->
-            </aside><!-- /.right-side -->
-        </div><!-- ./wrapper -->
-
-        <!-- add new calendar event modal -->
-    </body>
-</html>
-
+                <%= render 'layouts/footer' %>
