--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,2 +1,46 @@
-<h1>Users#new</h1>
-<p>Find me in app/views/users/new.html.erb</p>
+<%= render 'layouts/head' %>
+    <body class="bg-black">
+
+        <div class="form-box" id="login-box">
+            <div class="header">Sign Up</div>
+            <%= form_for(@user) do |f| %>
+            <!--<form action="../../index.html" method="post">-->
+                <div class="body bg-gray">
+                <%= render 'shared/error_messages' %>
+                    <div class="form-group">
+                        <!--<input type="text" name="userid" class="form-control" placeholder="User ID"/>-->
+                        <%= f.text_field :name, class: "form-control", placeholder: "Name" %>
+                    </div>
+                    <div class="form-group">
+                        <!--<input type="text" name="userid" class="form-control" placeholder="User ID"/>-->
+                        <%= f.text_field :email, class: "form-control", placeholder: "Email ID" %>
+                    </div>
+                    <div class="form-group">
+                        <!--<input type="password" name="password" class="form-control" placeholder="Password"/>-->
+                        <%= f.password_field :password, class: "form-control", placeholder: "Password" %>
+                    </div>   
+                    <div class="form-group">
+                        <!--<input type="password" name="password" class="form-control" placeholder="Password"/>-->
+                        <%= f.password_field :password_confirmation, class: "form-control", placeholder: "Confirm Password" %>
+                    </div>         
+                    <!--<div class="form-group">
+                        <input type="checkbox" name="remember_me"/> Remember me
+                    </div>-->
+                </div>
+                <div class="footer">
+                	<%= f.submit "Create my account", class: "btn bg-olive btn-block" %>                                          
+                    <!--<button type="submit" class="btn bg-olive btn-block">Sign me in</button>-->
+                </div>
+            <!--</form>-->
+            <% end %>
+
+            <!--<div class="margin text-center">
+                <span>Sign in using social networks</span>
+                <br/>
+                <button class="btn bg-light-blue btn-circle"><i class="fa fa-facebook"></i></button>
+                <button class="btn bg-aqua btn-circle"><i class="fa fa-twitter"></i></button>
+                <button class="btn bg-red btn-circle"><i class="fa fa-google-plus"></i></button>
+
+            </div>
+        </div>-->
+    </body>
