--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -8,7 +8,7 @@
                             <img src="/assets/avatar3.png" class="img-circle" alt="User Image" />
                         </div>
                         <div class="pull-left info">
-                            <p>Hello, Jane</p>
+                            <p>Hello, <%= current_user.name %></p>
 
                             <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
                         </div>
