--- a/app/views/layouts/_notifbar.html.erb
+++ b/app/views/layouts/_notifbar.html.erb
@@ -207,14 +207,14 @@
                         <li class="dropdown user user-menu">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                                 <i class="glyphicon glyphicon-user"></i>
-                                <span>Jane Doe <i class="caret"></i></span>
+                                <span><%= current_user.name %> <i class="caret"></i></span>
                             </a>
                             <ul class="dropdown-menu">
                                 <!-- User image -->
                                 <li class="user-header bg-light-blue">
                                     <img src="/assets/avatar3.png" class="img-circle" alt="User Image" />
                                     <p>
-                                        Jane Doe - Web Developer
+                                        <%= current_user.name %> - Web Developer
                                         <small>Member since Nov. 2012</small>
                                     </p>
                                 </li>
@@ -236,7 +236,8 @@
                                         <a href="#" class="btn btn-default btn-flat">Profile</a>
                                     </div>
                                     <div class="pull-right">
-                                        <a href="#" class="btn btn-default btn-flat">Sign out</a>
+                                    <%= link_to "Sign out", signout_path, method: "delete", class: "btn btn-default btn-flat" %>
+                                        <!--<a href="#" class="btn btn-default btn-flat">Sign out</a>-->
                                     </div>
                                 </li>
                             </ul>
