Change background of Sign in and Sign up page

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -28,7 +28,7 @@
                     </div>-->
                 </div>
                 <div class="footer">
-                	<%= f.submit "Create my account", class: "btn bg-olive btn-block" %>                                          
+                	<%= f.submit "Create my account", class: "btn bg-light-blue btn-block" %>                                          
                     <!--<button type="submit" class="btn bg-olive btn-block">Sign me in</button>-->
                 </div>
             <!--</form>-->
