--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,5 @@
 <%= render 'layouts/head' %>
-    <body class="bg-black">
+    <body>
 
         <div class="form-box" id="login-box">
             <div class="header">Sign Up</div>
