--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -26,9 +26,7 @@
                     <!-- sidebar menu: : style can be found in sidebar.less -->
                     <ul class="sidebar-menu">
                         <li class="active">
-                            <a href="/pages/index/">
-                                <i class="fa fa-dashboard"></i> <span>Dashboard</span>
-                            </a>
+                            <%= link_to(raw('<i class="fa fa-dashboard"></i> <span>Dashboard</span>'), home_path) %>
                         </li>
                         <li>
                             <a href="pages/widgets.html">
