Enable user avatar

--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -5,7 +5,8 @@
                     <!-- Sidebar user panel -->
                     <div class="user-panel">
                         <div class="pull-left image">
-                            <img src="/assets/avatar3.png" class="img-circle" alt="User Image" />
+                            <%= image_tag current_user.avatar.url, :class => "img-circle", :alt => "User Image" %>
+                            <!--<img src="/assets/avatar3.png" class="img-circle" alt="User Image" />-->
                         </div>
                         <div class="pull-left info">
                             <p>Hello, <%= current_user.name %></p>
