--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -23,9 +23,9 @@
                         <!--<input type="password" name="password" class="form-control" placeholder="Password"/>-->
                         <%= f.password_field :password_confirmation, class: "form-control", placeholder: "Confirm Password" %>
                     </div>         
-                    <!--<div class="form-group">
-                        <input type="checkbox" name="remember_me"/> Remember me
-                    </div>-->
+                    <div class="form-group">
+                        <%= f.file_field :avatar %>
+                    </div>
                 </div>
                 <div class="footer">
                 	<%= f.submit "Create my account", class: "btn bg-light-blue btn-block" %>                                          
